add request to API with using a date parameter